tests/ui/no_struct_name_one.stderr
error: expected identifier
 --> tests/ui/no_struct_name_one.rs:5:27
  |
5 |     query_args!("$a, $b", { test });
  |                           ^
